# MLFactory

./: .env.example  README.md  docker-compose.yml  pyproject.toml
src/api/: .dockerignore  Dockerfile  main.py  pyproject.toml
src/api/controllers/: engine.py
src/api/routes/: endpoints.py
src/api/services/: registry.py
src/front/: Dockerfile  app.py  pyproject.toml
src/mlops/: Dockerfile  start.sh
src/train/: train.py
