[project]
name = "mlfactory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "mlflow[extras]>=3.10.1",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "streamlit>=1.55.0",
]

[tool.uv.workspace]
members = [
    "src/front",
]
